[Issue #4] Fixed rocket positioning on Firefox

--- a/public/sass/screen.sass
+++ b/public/sass/screen.sass
@@ -202,6 +202,9 @@ img#diagram
     color: #86bdc7 !important
 
 #client
+  clear: both
+  padding-top: 100px
+
   h1, a
     color: #bfbc3d !important
 
@@ -242,6 +245,8 @@ img#diagram
 
 
 #deploy
+  overflow: visible
+
   h1, a
     color: #8378C7 !important
 
@@ -274,7 +279,6 @@ img#diagram
     +column(8, true)
 
   #rocket
-    position: absolute
     margin-top: -290px
     margin-left: +span(18)
 
